<resources>
    <string name="app_name">DroidData</string>
    <string name="action_settings">Forgot Password</string>
    <string name="section_format"></string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_auth"></string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_chart">Charts</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">example@domain.com</string>
    <string name="submit">SUBMIT</string>
    <string name="hint10">This will be your email adress</string>
    <string name="hint11">Please enter a password between 8 and 25 characters containing Uppercase and Lowercase characters and numbers</string>
    <string name="title_activity_data_set">Data Sets</string>
    
    <string name="disaster_thunderstorm">Thunderstorm (1999-2013, Kenya)</string>
    <string name="disaster_flood">Flood (1999-2013, Kenya)</string>
    <string name="disaster_landslide">Landslide (1999-2013, Kenya)</string>
    
    <string name="education_teachers_assigned">
        Number of Teachers assigned to Early Childhood Development Education
    </string>
    <string name="education_pupil_teacher_ratio">
        Comparison of Pupil to Teacher Ratios (Early Childhood Development Education)
    </string>
    <string name="education_school_attendance">
        School Attendance Data, Nairobi
    </string>

    <string name="tourism_museums">Major Museums</string>
    <string name="tourism_sites">Historical Sites</string>
    <string name="tourism_parks">National Parks</string>

    <string name="gender_inequality_title">Gender Inequality Index (KNBS, 2013, Kenya)</string>

</resources>
