<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tourism_frag"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:background="@color/background_material_light">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginBottom="10dp"
        card_view:cardBackgroundColor="#dddddd"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="5dp" >

        <TextView
            android:layout_marginLeft="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tourism_museums" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginBottom="10dp"
        card_view:cardBackgroundColor="#dddddd"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="5dp" >

        <TextView
            android:layout_marginLeft="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tourism_sites" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginBottom="10dp"
        card_view:cardBackgroundColor="#dddddd"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="5dp" >

        <TextView
            android:layout_marginLeft="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tourism_parks" />

    </android.support.v7.widget.CardView>

</LinearLayout>
